--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,32 +1,43 @@
 .container {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .column {
-    flex: 3;
-    padding: 10px;
+    flex: 1 0 33.33%;
+    max-width: 33.33%;
+    box-sizing: border-box; /* Include padding and border in the element's total width */
+    border: 1px solid green;
 }
 
-.canvas-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
 
 #myChart {
-    position: absolute;
-    top: 10%; /* Center the chart */
-    left: 10%;
-    width: 80%;
-    height: 80%;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
     z-index: 1;
 }
 
-#myLogo {
-    position: absolute;
-    top: 0; /* Position the logo in the top right corner */
-    right: 0;
-    width: 20%;
-    height: 20%;
-    z-index: 2;
+#myBars {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 1;
+}
+
+
+#myRadarChart {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%; 
+}
+
+
+@media (max-width: 600px) {
+    .column {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
 }
