--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -7,7 +7,7 @@
     flex: 1 0 33.33%;
     max-width: 33.33%;
     box-sizing: border-box; /* Include padding and border in the element's total width */
-    border: 1px solid green;
+    border: 0.5px solid green;
 }
 
 
@@ -15,6 +15,7 @@
     position: relative;
     margin-left: auto;
     margin-right: auto;
+    border: 0.5px solid blue;
     z-index: 1;
 }
 
