json format + proposed token for test purposes and future examples

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,6 +1,14 @@
-.container {
+.container-visible {
     display: flex;
     flex-wrap: wrap;
+}
+
+.container-hidden {
+    display: none;
+}
+
+.container-visible {
+    display: flex;
 }
 
 .column {
